<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imagebutor"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/image_border"
            android:padding="7dp"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            android:contentDescription="@string/love"
            />

        <TextView
            android:id="@+id/itemnev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imagebutor"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:textColor="#000000"
            android:shadowColor="#6E6E6E"
            android:shadowDx="-2"
            android:shadowDy="2"
            android:shadowRadius="1"
            android:padding="8dp"
            android:textSize="14sp"
            android:text="@string/itemn_v" />

        <TextView
            android:id="@+id/leiras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemnev"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:textColor="#000000"
            android:shadowColor="#6E6E6E"
            android:shadowDx="-2"
            android:shadowDy="2"
            android:shadowRadius="1"
            android:padding="8dp"
            android:text="@string/leiras" />


        <TextView
            android:id="@+id/ar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/leiras"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="12dp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:shadowColor="#6E6E6E"
            android:shadowDx="-2"
            android:shadowDy="2"
            android:shadowRadius="1"
            android:padding="8dp" />

        <Button
            android:id="@+id/kosarba"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ar"
            android:layout_centerHorizontal="true"
            app:backgroundTint="#E81010"
            android:text="@string/buy"
            android:textSize="11sp" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>